[package]
name = "bevy_paratrooper"
version = "0.3.0"
edition = "2021"

[dependencies]
bevy_prototype_lyon = "0.11.0"
rand = "0.8.5"

[dependencies.bevy_rapier2d]
version = "0.25.0"
features = [
    "wasm-bindgen"
]

[dependencies.bevy]
version = "0.13.0"
#default-features = false
# These are the remaining default features other than `bevy_audio` and `mp3`
features = [
    "wav",
    "png",
    "dynamic_linking", # remove for release builds
]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
codegen-units = 1

# Build using official Windows libs
#[target.x86_64-pc-windows-msvc]
#linker = "lld"
#rustflags = [
#    "-Lnative=/home/mbusux/.xwin/crt/lib/x86_64",
#    "-Lnative=/home/mbusux/.xwin/sdk/lib/um/x86_64",
#    "-Lnative=/home/mbusux/.xwin/sdk/lib/ucrt/x86_64"
#]